--- a/MarathonTutorialWebsite.csproj
+++ b/MarathonTutorialWebsite.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <EmbeddedResource Include="./Creds/creds.json" />
   </ItemGroup>
 
 </Project>
